[gd_scene load_steps=4 format=3 uid="uid://dig2cl418enoo"]

[ext_resource type="Script" uid="uid://df4mi3qr2wke8" path="res://Scripts/options_menu.gd" id="1_plplt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ptvp"]
bg_color = Color(0.760784, 0, 0.133333, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_detail = 11

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_plplt"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
border_blend = true

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource("1_plplt")

[node name="OptionsContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="MenusContainer" type="HBoxContainer" parent="OptionsContainer"]
layout_mode = 2

[node name="SettingsContainer" type="PanelContainer" parent="OptionsContainer/MenusContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_7ptvp")

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsContainer/MenusContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="AudioSettings" type="Button" parent="OptionsContainer/MenusContainer/SettingsContainer/VBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Audio"

[node name="VideoSettings" type="Button" parent="OptionsContainer/MenusContainer/SettingsContainer/VBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Video"

[node name="AccessibilitySettings" type="Button" parent="OptionsContainer/MenusContainer/SettingsContainer/VBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Accessibility"

[node name="ReturnButton" type="Button" parent="OptionsContainer/MenusContainer/SettingsContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Return"

[node name="OptionsContainer" type="PanelContainer" parent="OptionsContainer/MenusContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_plplt")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.415686, 0.415686, 0.415686, 0.478431)

[connection signal="pressed" from="OptionsContainer/MenusContainer/SettingsContainer/VBoxContainer/AudioSettings" to="." method="_on_audio_settings_pressed"]
[connection signal="pressed" from="OptionsContainer/MenusContainer/SettingsContainer/VBoxContainer/VideoSettings" to="." method="_on_video_settings_pressed"]
[connection signal="pressed" from="OptionsContainer/MenusContainer/SettingsContainer/VBoxContainer/AccessibilitySettings" to="." method="_on_accessibility_settings_pressed"]
[connection signal="pressed" from="OptionsContainer/MenusContainer/SettingsContainer/ReturnButton" to="." method="_on_return_button_pressed"]
